# object_detection_and_tracking

./: .gitignore  README.md  merge_class.sh  run.sh  semi_merge.sh  setup.sh  test.py  trackerInfo.py
archive/EvalTest/: EvalTest.h
archive/EvalTest/test/: test.cpp
archive/python/references/: deepsort.py
archive/python/src/: tracking.py
classes/: classes_default.txt  classes_merge.txt  classes_semi_merge.txt  classes_train.txt
cpp/src/Tracking/: CMakeLists.txt  MOTCorrelationTracker.cpp  MOTCorrelationTracker.h
python/references/: webcam_sub.py
python/src/: detection.py  helper_funcs.py  test.py  tracker_with_ass.py  tracking_association.py  tracking_sort.py
references/: tracking.py  webcam_pub.py
src/: detection.py  helper_funcs.py  simple_tracker.py  tracker_with_ass.py
src/detection/: CMakeLists.txt  detection.cpp  detection2.cpp
src/tracking/: tracking.cpp
src/tracking_assignment/: CMakeLists.txt  MOTCorrelationTracker.cpp  MOTCorrelationTracker.h  main.cpp
src/tracking_association/: CMakeLists.txt  MOTCorrelationTracker.cpp  MOTCorrelationTracker.h  Utils.cpp  main.cpp
src/video_stream/: CMakeLists.txt  helper_funcs.cpp  video_stream.cpp  video_stream2.cpp
training/: check_labels.py  merge_class.sh  semi_merge.sh
training/check_labels/: check_labels.py
training/frame_extractor/: CMakeLists.txt  FrameExtractor.cpp  frame_extractor.py
training/matlab_convertor/: matlab_convertor.py  matlab_to_csv.py  matlab_to_yolo_labels.py  output.csv  output.txt
training/merge_class/: merge_class.py  semi_merge.py
training/train_val_splitter/: train_val_splitter_random.py
(+26 files in other folders)
